--- a/www/index.html
+++ b/www/index.html
@@ -41,7 +41,7 @@
             <h1>Apache Cordova</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
+                <p class="event received">Hello world</p>
             </div>
         </div>
         <script src="cordova.js"></script>
