--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div id="deviceready" class="blink">
-            <ons-button>Click me!</ons-button>
+            <ons-button>Aca</ons-button>
         </div>
         <script src="cordova.js"></script>
         <script src="js/index.js"></script>
