--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
+        <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: http://localhost:3050 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
@@ -13,13 +13,16 @@
         <link rel="stylesheet" href="css/onsenui/onsenui.min.css">
         <link rel="stylesheet" href="css/onsenui/onsenui-core.min.css">
         <link rel="stylesheet" href="css/onsenui/onsen-css-components.min.css">
+
+        <script type="module" src="js/verifySession.js"></script>
     </head>
     <body>
         <div id="deviceready" class="blink">
             <ons-button>Aca</ons-button>
+            <a href="./pages/editProfileUser.html">Edit</a>
         </div>
         <script src="cordova.js"></script>
-        <script src="js/index.js"></script>
+        <script type="module" src="js/index.js"></script>
         <script src="js/onsenui/onsenui.min.js"></script>
     </body>
 </html>
