--- a/www/pages/editProfileUser.html
+++ b/www/pages/editProfileUser.html
@@ -56,8 +56,11 @@
                 </ons-card>
             </ons-page>
         </main>
+        
+        <div id="tabbar-container"></div>
         <script src="../cordova.js"></script>
         <script src="../js/onsenui/onsenui.min.js"></script>
         <script src="../js/editProfileUser.js"></script>
+        <script src="../js/loadTabbar.js"></script>
     </body>
 </html>
