--- a/www/pages/tasks.html
+++ b/www/pages/tasks.html
@@ -90,8 +90,11 @@
         </form>
       </ons-modal>
     </main>
+
+    <div id="tabbar-container"></div>
     <script src="../cordova.js"></script>
     <script src="../js/onsenui/onsenui.min.js"></script>
     <script src="../js/tasks.js"></script>
+    <script src="../js/loadTabbar.js"></script>
   </body>
 </html>
