--- a/www/pages/tasks.html
+++ b/www/pages/tasks.html
@@ -1,100 +1,68 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="default-src 'self' data: http://localhost:3050 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;"
-    />
-    <meta name="format-detection" content="telephone=no" />
-    <meta name="msapplication-tap-highlight" content="no" />
-    <meta
-      name="viewport"
-      content="initial-scale=1, width=device-width, viewport-fit=cover"
-    />
-    <meta name="color-scheme" content="light dark" />
-    <link rel="stylesheet" href="../css/index.css" />
-    <link rel="stylesheet" href="../css/login.css" />
-    <title>Tasks</title>
 
-    <link rel="stylesheet" href="../css/onsenui/onsenui.min.css" />
-    <link rel="stylesheet" href="../css/onsenui/onsenui-core.min.css" />
-    <link rel="stylesheet" href="../css/onsenui/onsen-css-components.min.css" />
-  </head>
-  <body>
-    <main>
-      <ons-page>
-        <ons-toolbar>
-          <ons-toolbar-button class="left" icon="md-face"></ons-toolbar-button>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'self' data: http://localhost:3050 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;" />
+  <meta name="format-detection" content="telephone=no" />
+  <meta name="msapplication-tap-highlight" content="no" />
+  <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover" />
+  <meta name="color-scheme" content="light dark" />
+  <link rel="stylesheet" href="../css/index.css" />
+  <link rel="stylesheet" href="../css/login.css" />
+  <title>Tasks</title>
 
-          <div class="center">Tasks</div>
+  <link rel="stylesheet" href="../css/onsenui/onsenui.min.css" />
+  <link rel="stylesheet" href="../css/onsenui/onsenui-core.min.css" />
+  <link rel="stylesheet" href="../css/onsenui/onsen-css-components.min.css" />
+</head>
 
-          <div class="right">
-            <ons-toolbar-button>-</ons-toolbar-button>
-            <ons-toolbar-button>+</ons-toolbar-button>
-          </div>
-        </ons-toolbar>
-        <ons-list id="list_tasks">
-        </ons-list>
-        <ons-fab position="bottom right">
-          <ons-icon icon="md-plus" id="button-task-new"></ons-icon>
-        </ons-fab>
-      </ons-page>
+<body>
+  <main>
+    <ons-page>
+      <ons-toolbar>
+        <div class="center">
+          <ons-segment id="segment" tabbar-id="tabbar" style="width: 200px">
+            <button id="tasksButton" class="active">Tasks</button>
+            <button id="tasksCompleteButton">Tasks Complete</button>
+          </ons-segment>
+        </div>
+      </ons-toolbar>
+      <ons-list id="list_tasks">
+      </ons-list>
+      <ons-fab position="bottom right" style="margin-bottom: 3%;">
+        <ons-icon icon="md-plus" id="button-task-new"></ons-icon>
+      </ons-fab>
+    </ons-page>
 
-      <ons-modal direction="up">
-        <form class="form-task">
-          <div class="form-group">
-            <ons-input
-              id="task-title"
-              modifier="underbar"
-              placeholder="Title task"
-              type="text"
-              float
-            ></ons-input>
-          </div>
-          <div class="form-group">
-            <ons-input
-              id="task-description"
-              modifier="underbar"
-              placeholder="Description"
-              type="text"
-              float
-            ></ons-input>
-          </div>
-          <div class="form-group">
-            <ons-input
-              id="task-date"
-              modifier="underbar"
-              placeholder="Date"
-              type="date"
-              float
-            ></ons-input>
-          </div>
-          <div class="form-group">
-            <ons-button
-              type="submit"
-              id="taks-location"
-              style="text-transform: none"
-            >
-              location</ons-button
-            >
-          </div>
-          <div class="mb-1">
-            <ons-button
-              type="submit"
-              id="button-add-task"
-              style="text-transform: none"
-              >Save task</ons-button
-            >
-          </div>
-        </form>
-      </ons-modal>
-    </main>
+    <ons-modal direction="up">
+      <form class="form-task">
+        <div class="form-group">
+          <ons-input id="task-title" modifier="underbar" placeholder="Title task" type="text" float></ons-input>
+        </div>
+        <div class="form-group">
+          <ons-input id="task-description" modifier="underbar" placeholder="Description" type="text" float></ons-input>
+        </div>
+        <div class="form-group">
+          <ons-input id="task-date" modifier="underbar" placeholder="Date" type="date" float></ons-input>
+        </div>
+         <div class="form-group" style="position: relative;">
+          <ons-progress-circular indeterminate id="spinner" style="display: none; margin-bottom: 30px;"></ons-progress-circular>
+          <p id="textSpinner" style="display: none; position: absolute; bottom: 0; left: 50%; transform: translateX(-50%);">Se está creando la tarea</p>
+        </div>         
+        <div class="mb-1">
+          <ons-button type="submit" id="button-add-task" style="text-transform: none;">Save task</ons-button>
+        </div>
+      </form>
+    </ons-modal>
+  </main>
 
-    <div id="tabbar-container"></div>
-    <script src="../cordova.js"></script>
-    <script src="../js/onsenui/onsenui.min.js"></script>
-    <script src="../js/tasks.js"></script>
-    <script src="../js/loadTabbar.js"></script>
-  </body>
+  <div id="tabbar-container"></div>
+  <script src="../cordova.js"></script>
+  <script src="../js/onsenui/onsenui.min.js"></script>
+  <script src="../js/tasks.js"></script>
+  <script src="../js/loadTabbar.js"></script>
+</body>
+
 </html>
