--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,7 @@
         <script src="cordova.js"></script>
         <script src="js/onsenui/onsenui.js"></script>
         <script src="js/onsenui/onsenui.min.js"></script>
+        <script src="js/verifySession.js"></script>
         <script src="js/index.js"></script>
         <script src="js/loadTabbar.js"></script>
     </body>
