--- a/www/pages/login.html
+++ b/www/pages/login.html
@@ -45,5 +45,6 @@
         <script src="../cordova.js"></script>
         <script src="../js/onsenui/onsenui.min.js"></script>
         <script src="../js/login.js"></script>
+        <script src="../js/services/user.sevice.js"></script>
     </body>
 </html>
