--- a/www/pages/register.html
+++ b/www/pages/register.html
@@ -49,6 +49,8 @@
         </main>
         <script src="../cordova.js"></script>
         <script src="../js/onsenui/onsenui.min.js"></script>
-        <script src="../js/serviceUser.js"></script>
+        <script src="../js/index.js"></script>
+        <script src="../js/services/user.sevice.js"></script>
+        <script src="../js/register.js"></script>
     </body>
 </html>
