filter priority. High to low, high, medium and low

--- a/www/pages/tasks.html
+++ b/www/pages/tasks.html
@@ -35,7 +35,7 @@
             <button id="tasks-completed">Tasks Complete</button>
           </ons-segment>
           <div class="rigth" style="padding-left: 10px;">
-            <ons-select style="font-size: small;">
+            <ons-select id="priority-select" style="font-size: small;">
               <option value="all">High to Low</option>
               <option value="low">Low</option>
               <option value="mediu">Medium</option>
