--- a/www/index.html
+++ b/www/index.html
@@ -1,37 +1,225 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: http://localhost:3050 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
-        <meta name="format-detection" content="telephone=no">
-        <meta name="msapplication-tap-highlight" content="no">
-        <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
-        <meta name="color-scheme" content="light dark">
-        <link rel="stylesheet" href="css/index.css">
-        <title>Task Ya</title>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self' data: http://localhost:3050 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;"
+    />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="msapplication-tap-highlight" content="no" />
+    <meta
+      name="viewport"
+      content="initial-scale=1, width=device-width, viewport-fit=cover"
+    />
+    <meta name="color-scheme" content="light dark" />
+    <link rel="stylesheet" href="css/index.css" />
+    <title>Task Ya</title>
 
-        <link rel="stylesheet" href="css/onsenui/onsenui.min.css">
-        <link rel="stylesheet" href="css/onsenui/onsenui-core.min.css">
-        <link rel="stylesheet" href="css/onsenui/onsen-css-components.min.css">
+    <link rel="stylesheet" href="css/onsenui/onsenui.min.css" />
+    <link rel="stylesheet" href="css/onsenui/onsenui-core.min.css" />
+    <link rel="stylesheet" href="css/onsenui/onsen-css-components.min.css" />
 
-        <!-- <script type="module" src="js/verifySession.js"></script> -->
-    </head>
-    <body>
-        <div id="deviceready" class="blin">
-            <ons-page>
-                <ons-toolbar>
-                  <div class="center">Tab 1</div>
-                </ons-toolbar>
-              </ons-page>
-        </div>
+  </head>
+  <body>
+    <div id="deviceready" class="blin">
+      <ons-navigator swipeable id="navigator" page="login.html"></ons-navigator>
 
-        <div id="tabbar-container"></div>
+      <template id="login.html">
+        <ons-page id="login">
+          <ons-toolbar>
+            <div class="center">Sign in</div>
+          </ons-toolbar>
+          <ons-card>
+            <form class="form-login">
+              <div class="form-group">
+                <ons-input
+                  id="email"
+                  modifier="underbar"
+                  placeholder="Email"
+                  type="email"
+                  float
+                ></ons-input>
+              </div>
 
-        <script src="cordova.js"></script>
-        <script src="js/onsenui/onsenui.js"></script>
-        <script src="js/onsenui/onsenui.min.js"></script>
-        <script src="js/verifySession.js"></script>
-        <script src="js/index.js"></script>
-        <script src="js/loadTabbar.js"></script>
-    </body>
+              <div class="form-group">
+                <ons-input
+                  id="password"
+                  modifier="underbar"
+                  placeholder="Password"
+                  type="password"
+                  float
+                ></ons-input>
+              </div>
+
+              <div class="mb-1">
+                <ons-button id="button-sign-in" modifier="large"
+                  >Sign in</ons-button
+                >
+              </div>
+              <div class="mb-1">
+                <ons-button id="button-sign-up" modifier="large outline"
+                  >Sign up</ons-button
+                >
+              </div>
+            </form>
+          </ons-card>
+        </ons-page>
+      </template>
+
+      <template id="register.html">
+        <ons-page id="register">
+          <ons-toolbar>
+            <div class="center">Sign up</div>
+          </ons-toolbar>
+          <ons-card>
+            <form class="form-login">
+              <div class="form-group">
+                <ons-input
+                  id="username-register"
+                  modifier="underbar"
+                  placeholder="Username"
+                  type="text"
+                  float
+                ></ons-input>
+              </div>
+
+              <div class="form-group">
+                <ons-input
+                  id="email-register"
+                  modifier="underbar"
+                  placeholder="Email"
+                  type="email"
+                  float
+                ></ons-input>
+              </div>
+
+              <div class="form-group">
+                <ons-input
+                  id="password-register"
+                  modifier="underbar large"
+                  placeholder="Password"
+                  type="password"
+                  float
+                ></ons-input>
+              </div>
+
+              <div class="mb-1">
+                <ons-button type="submit" id="button-sign-up" modifier="large"
+                  >Sign up</ons-button
+                >
+              </div>
+
+              <div class="mb-1">
+                <ons-button id="button-sign-in" modifier="outline large"
+                  >Sign in</ons-button
+                >
+              </div>
+            </form>
+          </ons-card>
+        </ons-page>
+      </template>
+
+      <template id="tasks.html">
+        <ons-page id="tasks">
+          <ons-toolbar>
+            <div class="center">Tasks</div>
+            <div class="right" style="margin-right: 20px">
+              <ons-icon id="button-sign-out" icon="md-close-circle"></ons-icon>
+            </div>
+          </ons-toolbar>
+          <main>
+            <div class="d-flex justify-content-center text-center my-1">
+              <ons-segment class="w-75 mx-auto">
+                <button id="tasks-no-completed" class="active">Tasks</button>
+                <button id="tasks-completed">Tasks Complete</button>
+              </ons-segment>
+            </div>
+            <ons-list id="task-list"> </ons-list>
+            <ons-fab position="bottom right" style="margin-bottom: 5%">
+              <ons-icon icon="md-plus" id="button-task-new"></ons-icon>
+            </ons-fab>
+
+            <ons-modal direction="up">
+              <form class="form-task">
+                <div class="form-group">
+                  <ons-input
+                    id="task-title"
+                    modifier="underbar"
+                    placeholder="Title task"
+                    type="text"
+                    float
+                  ></ons-input>
+                </div>
+                <div class="form-group">
+                  <ons-input
+                    id="task-description"
+                    modifier="underbar"
+                    placeholder="Description"
+                    type="text"
+                    float
+                  ></ons-input>
+                </div>
+                <div class="form-group">
+                  <ons-input
+                    id="task-date"
+                    modifier="underbar"
+                    placeholder="Date"
+                    type="date"
+                    float
+                  ></ons-input>
+                </div>
+                <div class="form-group" style="position: relative">
+                  <ons-progress-circular
+                    indeterminate
+                    id="spinner"
+                    style="display: none; margin-bottom: 30px"
+                  ></ons-progress-circular>
+                  <p
+                    id="textSpinner"
+                    style="
+                      display: none;
+                      position: absolute;
+                      bottom: 0;
+                      left: 50%;
+                      transform: translateX(-50%);
+                    "
+                  >
+                    Se está creando la tarea
+                  </p>
+                </div>
+                <div class="mb-1">
+                  <ons-button
+                    type="submit"
+                    id="button-add-task"
+                    style="text-transform: none"
+                    >Save task</ons-button
+                  >
+                </div>
+              </form>
+            </ons-modal>
+          </main>
+        </ons-page>
+      </template>
+    </div>
+
+    <script src="cordova.js"></script>
+    <script src="js/onsenui/onsenui.js"></script>
+    <script src="js/onsenui/onsenui.min.js"></script>
+
+    <script src="js/config/db.config.js"></script>
+    <script src="js/config/syncDatabase.js"></script>
+    <script src="js/config/saveQueriesDBlocal.js"></script>
+    <script src="js/bcrypt/password.utils.js"></script>
+    <script src="js/repositories/task.repository.js"></script>
+    <script src="js/repositories/user.repository.js"></script>
+    <script src="js/services/task.service.js"></script>
+    <script src="js/services/user.sevice.js"></script>
+    <script src="js/tasks.js"></script>
+    <script src="js/login.js"></script>
+    <script src="js/register.js"></script>
+    <script src="js/verifySession.js"></script>
+    <script src="js/verifyConnection.js"></script>
+    <script src="js/index.js"></script>
+  </body>
 </html>
